# OrionTrader

./: .env.example  .gitattributes  .gitignore  AUTHENTICATION.md  DATA_DICTIONARY.md  GUIDE_PIPELINE_V3.md  INSTALL_PYARROW.md  MONITORING.md  Makefile  PROTECTION_WEEKEND.md  README.md  TESTING.md  VALIDATION_C12_C13.md  docker-compose.prod.yml  docker-compose.yaml  docker-compose.yml  forex_ppo_train.ipynb  init-db.sh  init-postgres.sh  init-vault.sh  metatrader_ppo_train.ipynb  orion_training.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test.ipynb  test_trading_calendar.py  test_weekend_protection.py
actions-runner/: .credentials  .credentials_rsaparams  .runner
airflow/: .Dockerignore  Dockerfile  WIKIPEDIA_SCRAPING.md  airflow.cfg  requirements.txt
app/: main.py
docker-init/: README.md  init-db.sh  init-postgres.py  init-postgres.sh  init-vault-production.sh  init-vault.sh  restart-vault.sh  setup-vault-keys.sh  vault-auto-unseal.sh  vault-entrypoint.sh
docs/: ANALYSE_COMPETENCES_COMPLETE.md  COMPETENCES_MLOPS.md  E1_Gestion_des_donnees_COMPLET.md  E1_Gestion_des_donnees_FINAL.md  OPTUNA_INTEGRATION_STATUS.md
fastapi/: Dockerfile  entrypoint.sh  example_vault.py  main.py  requirements.txt
marimo/: Dockerfile
metatrader/: generate_data.py
mlflow/: Dockerfile  mlflow_config.py
nginx/: Dockerfile  nginx.conf
nginx-vpn/: Dockerfile  nginx.conf
pgadmin/: servers.json
prometheus/: alert.rules.yml  prometheus.yml
reinforcement_learning/: forex_ppo_train.ipynb  metatrader_ppo_test.ipynb  metatrader_ppo_train.ipynb  (+2 more)
(+156 files in other folders)
